updating with ngAnimate

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Controller Demo</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body ng-controller="mainCtrl as app">
-  
+
   <h1>{{app.messageMain}}</h1>
 
   <!-- views get brought in here -->
@@ -14,6 +15,7 @@
   <!-- Vendors -->
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/angular-route/angular-route.min.js"></script>
+  <script src="node_modules/angular-animate/angular-animate.min.js"></script>
 
   <!-- Local Scripts -->
   <script src="app.js"></script>
